--- a/src/index.html
+++ b/src/index.html
@@ -477,6 +477,46 @@
 					</div>
 			</section>
 
+			<section class="process">
+				<div class="process__container">
+					<h2 class="process__title title-h2">Как проходит заселение</h2>
+					<div class="process__steps">
+						<div class="process__step">
+							<div class="process__num">1</div>
+							<div class="process__text-box">
+								<div class="process__name">Выбор</div>
+								<p class="process__text">Выберите дом на сайте самостоятельно
+									или с помощью менеджера, если нужна консультация.</p>
+							</div>
+						</div>
+						<div class="process__step">
+							<div class="process__num">2</div>
+							<div class="process__text-box">
+								<div class="process__name">Бронирование</div>
+								<p class="process__text">Оформите онлайн на сайте или свяжитесь с менеджером, который все оформит и
+									подтвердит бронирование.</p>
+							</div>
+						</div>
+						<div class="process__step">
+							<div class="process__num">3</div>
+							<div class="process__text-box">
+								<div class="process__name">Оплата</div>
+								<p class="process__text">Оформите онлайн на сайте или свяжитесь с менеджером, который все оформит и
+									подтвердит бронирование.</p>
+							</div>
+						</div>
+						<div class="process__step">
+							<div class="process__num">4</div>
+							<div class="process__text-box">
+								<div class="process__name">Заселение</div>
+								<p class="process__text">Заселитесь в удобное время без ожиданий. Менеджер дистанционно направит
+									инструкции и поможет, если потребуется.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 
 
