--- a/src/index.html
+++ b/src/index.html
@@ -513,9 +513,29 @@
 									инструкции и поможет, если потребуется.</p>
 							</div>
 						</div>
+
+						<img src="@img/process/line.svg" alt="" class="process__line">
+
 					</div>
 				</div>
 			</section>
+
+			<div class="banner-callback">
+				<div class="banner-callback__container">
+					<div class="banner-callback__content">
+						<div class="banner-callback__top">
+							<div class="banner-callback__title-box">
+								<img src="@img/process/callback-photo.jpg" alt="" class="banner-callback__photo">
+								<h4 class="banner-callback__title">Наши сервис-менеджеры всегда на связи</h4>
+							</div>
+							<div class="banner-callback__text">Помогут подобрать дом под ваши пожелания, расскажут про досуг на
+								территории поселка, решат любые вопросы по дому.</div>
+						</div>
+						<a href="" class="banner-callback__button button">Связаться с менеджером</a>
+					</div>
+
+				</div>
+			</div>
 
 		</main>
 
