--- a/src/index.html
+++ b/src/index.html
@@ -537,6 +537,39 @@
 				</div>
 			</div>
 
+			<section class="values">
+				<div class="values__container">
+					<h2 class="values__title title-h2">Наши ценности</h2>
+					<div class="values__grid">
+						<div class="value__item">
+							<div class="values__text-box">
+								<h3 class="values__name">Надёжность и прозрачность</h3>
+								<p class="values__text">Мы делаем все, чтобы гости и партнёры точно знали, чего ожидать,
+									и не сталкивались с неожиданностями</p>
+							</div>
+							<img src="@img/values/01.jpg" alt="" class="values__image">
+						</div>
+						<div class="value__item">
+							<div class="values__text-box">
+								<h3 class="values__name">Партнёрство и доверие</h3>
+								<p class="values__text">Мы строим честные и выгодные условия с собственниками, инвесторами и партнерами
+								</p>
+							</div>
+							<img src="@img/values/02.jpg" alt="" class="values__image">
+						</div>
+						<div class="value__item">
+							<div class="values__text-box">
+								<h3 class="values__name">Семейный подход</h3>
+								<p class="values__text">Мы совмещаем ведение бизнеса с воспитанием двух маленьких детей и понимаем, что
+									значит полностью отключиться от работы и перезагрузиться среди березового леса</p>
+							</div>
+							<img src="@img/values/03.jpg" alt="" class="values__image">
+						</div>
+
+					</div>
+				</div>
+			</section>
+
 		</main>
 
 
