--- a/src/index.html
+++ b/src/index.html
@@ -402,7 +402,7 @@
 				</div>
 			</section>
 
-			<section class="pricing">
+			<section class="pricing pt180">
 				<div class="pricing__container">
 					<h2 class="pricing__title title-h2">Стоимость проживания включает следующие услуги и удобства:</h2>
 					<div class="pricing__content">
@@ -477,7 +477,7 @@
 					</div>
 			</section>
 
-			<section class="process">
+			<section class="process pt180">
 				<div class="process__container">
 					<h2 class="process__title title-h2">Как проходит заселение</h2>
 					<div class="process__steps">
@@ -541,7 +541,7 @@
 				<div class="values__container">
 					<h2 class="values__title title-h2">Наши ценности</h2>
 					<div class="values__grid">
-						<div class="value__item">
+						<div class="values__item">
 							<div class="values__text-box">
 								<h3 class="values__name">Надёжность и прозрачность</h3>
 								<p class="values__text">Мы делаем все, чтобы гости и партнёры точно знали, чего ожидать,
@@ -549,7 +549,7 @@
 							</div>
 							<img src="@img/values/01.jpg" alt="" class="values__image">
 						</div>
-						<div class="value__item">
+						<div class="values__item">
 							<div class="values__text-box">
 								<h3 class="values__name">Партнёрство и доверие</h3>
 								<p class="values__text">Мы строим честные и выгодные условия с собственниками, инвесторами и партнерами
@@ -557,7 +557,7 @@
 							</div>
 							<img src="@img/values/02.jpg" alt="" class="values__image">
 						</div>
-						<div class="value__item">
+						<div class="values__item">
 							<div class="values__text-box">
 								<h3 class="values__name">Семейный подход</h3>
 								<p class="values__text">Мы совмещаем ведение бизнеса с воспитанием двух маленьких детей и понимаем, что
@@ -567,6 +567,50 @@
 						</div>
 
 					</div>
+				</div>
+			</section>
+
+			<section class="faq pt180">
+				<div class="faq__container">
+					<h2 class="faq__title title-h2">Ответы на частые вопросы</h2>
+					<div class="faq__accordeon">
+						<div data-spollers class="spollers">
+							<details class="spollers__item">
+								<summary class="spollers__title">Есть ли у вас завтраки?</summary>
+								<div class="spollers__body">Ответ на вопрос</div>
+							</details>
+							<details class="spollers__item">
+								<summary class="spollers__title">Можно ли с питомцами?</summary>
+								<div class="spollers__body">Ответ на вопрос</div>
+							</details>
+							<details class="spollers__item">
+								<summary class="spollers__title">Можно ли заказать еду в дом? </summary>
+								<div class="spollers__body">спойлера</div>
+							</details>
+							<details class="spollers__item">
+								<summary class="spollers__title">Есть дома для семей с детьми?</summary>
+								<div class="spollers__body">Ответ на вопрос</div>
+							</details>
+							<details class="spollers__item">
+								<summary class="spollers__title">Как оплачивать бронирование?</summary>
+								<div class="spollers__body">Ответ на вопрос</div>
+							</details>
+							<details class="spollers__item">
+								<summary class="spollers__title">Есть ли мангал и принадлежности?</summary>
+								<div class="spollers__body">Ответ на вопрос</div>
+							</details>
+							<details class="spollers__item">
+								<summary class="spollers__title">Есть ли интернет и телевизор?</summary>
+								<div class="spollers__body">Ответ на вопрос</div>
+							</details>
+							<details class="spollers__item">
+								<summary class="spollers__title">Как проходит заселение?</summary>
+								<div class="spollers__body">Ответ на вопрос</div>
+							</details>
+						</div>
+					</div>
+					<a href="" class="faq__button button">Задать вопрос</a>
+					<p class="faq__text">Ответим на все ваши вопросы и подберем дом</p>
 				</div>
 			</section>
 
