--- a/src/index.html
+++ b/src/index.html
@@ -614,7 +614,7 @@
 				</div>
 			</section>
 
-			<section class="reviews pb180">
+			<section class="reviews pt180">
 				<div class="reviews__container">
 					<h2 class="reviews__title title-h2">О нас пишут гости</h2>
 					<div class="reviews__content">
@@ -624,85 +624,88 @@
 						</div>
 
 						<div class="reviews__slider-box">
+							<div class="reviews__middle-box">
 
-							<div class="reviews__slider swiper">
+								<div class="reviews__slider swiper">
 
-								<div class="reviews__wrapper swiper-wrapper">
+									<div class="reviews__wrapper swiper-wrapper">
 
-									<div class="reviews__slide swiper-slide">
+										<div class="reviews__slide swiper-slide">
 
-										<div class="reviews__item">
-											<div class="reviews__top">
-												<img class="reviews__photo" src="@img/reviews/01.jpg" alt="фото отзыва">
-												<div class="reviews__data">
-													<div class="reviews__name">Ирина Кондитер</div>
-													<div class="reviews__geo">3-к. дом, 90 м²</div>
+											<div class="reviews__item">
+												<div class="reviews__top">
+													<img class="reviews__photo" src="@img/reviews/01.jpg" alt="фото отзыва">
+													<div class="reviews__data">
+														<div class="reviews__name">Ирина Кондитер</div>
+														<div class="reviews__geo">3-к. дом, 90 м²</div>
+													</div>
 												</div>
+												<div class="reviews__text">Спасибо за домик — мы влюбились 🥰 Чистый, новенький, уютный,
+													современный, все для комфортного пребывания. Отдыхали с детьми — классно, что только один
+													этаж —
+													не переживала, что за детьми не нужно постоянно присматривать, если бы была лестница на второй
+													этаж.</div>
 											</div>
-											<div class="reviews__text">Спасибо за домик — мы влюбились 🥰 Чистый, новенький, уютный,
-												современный, все для комфортного пребывания. Отдыхали с детьми — классно, что только один этаж —
-												не переживала, что за детьми не нужно постоянно присматривать, если бы была лестница на второй
-												этаж.</div>
+
 										</div>
 
-									</div>
+										<div class="reviews__slide swiper-slide">
 
-									<div class="reviews__slide swiper-slide">
-
-										<div class="reviews__item">
-											<div class="reviews__top">
-												<img class="reviews__photo" src="@img/reviews/02.jpg" alt="фото отзыва">
-												<div class="reviews__data">
-													<div class="reviews__name">Максим Кузнецов</div>
-													<div class="reviews__geo">3-к. дом, 90 м²</div>
+											<div class="reviews__item">
+												<div class="reviews__top">
+													<img class="reviews__photo" src="@img/reviews/02.jpg" alt="фото отзыва">
+													<div class="reviews__data">
+														<div class="reviews__name">Максим Кузнецов</div>
+														<div class="reviews__geo">3-к. дом, 90 м²</div>
+													</div>
 												</div>
+												<div class="reviews__text">В первый раз оставляю отзыв осознанно 🙏 Очень крутое место
+													Дом максимально комфортный для проживания 🔥 Нас было 5 взрослых + 2 детей = 7 человек Рядом
+													прудик где плавают рыбки (можно кормить с детьми) бывает прилетают утки 🦆 До Истры идти минут
+													15 В общем максимально кайфанули от городской суеты Рекомендую 🔥🙏</div>
 											</div>
-											<div class="reviews__text">В первый раз оставляю отзыв осознанно 🙏 Очень крутое место
-												Дом максимально комфортный для проживания 🔥 Нас было 5 взрослых + 2 детей = 7 человек Рядом
-												прудик где плавают рыбки (можно кормить с детьми) бывает прилетают утки 🦆 До Истры идти минут
-												15 В общем максимально кайфанули от городской суеты Рекомендую 🔥🙏</div>
+
 										</div>
 
-									</div>
-									
-									<div class="reviews__slide swiper-slide">
+										<div class="reviews__slide swiper-slide">
 
-										<div class="reviews__item">
-											<div class="reviews__top">
-												<img class="reviews__photo" src="@img/reviews/01.jpg" alt="фото отзыва">
-												<div class="reviews__data">
-													<div class="reviews__name">Ирина Кондитер</div>
-													<div class="reviews__geo">3-к. дом, 90 м²</div>
+											<div class="reviews__item">
+												<div class="reviews__top">
+													<img class="reviews__photo" src="@img/reviews/01.jpg" alt="фото отзыва">
+													<div class="reviews__data">
+														<div class="reviews__name">Ирина Кондитер</div>
+														<div class="reviews__geo">3-к. дом, 90 м²</div>
+													</div>
 												</div>
+												<div class="reviews__text">Спасибо за домик — мы влюбились 🥰 Чистый, новенький, уютный,
+													современный, все для комфортного пребывания. Отдыхали с детьми — классно, что только один
+													этаж —
+													не переживала, что за детьми не нужно постоянно присматривать, если бы была лестница на второй
+													этаж.</div>
 											</div>
-											<div class="reviews__text">Спасибо за домик — мы влюбились 🥰 Чистый, новенький, уютный,
-												современный, все для комфортного пребывания. Отдыхали с детьми — классно, что только один этаж —
-												не переживала, что за детьми не нужно постоянно присматривать, если бы была лестница на второй
-												этаж.</div>
+
 										</div>
 
-									</div>
+										<div class="reviews__slide swiper-slide">
 
-									<div class="reviews__slide swiper-slide">
-
-										<div class="reviews__item">
-											<div class="reviews__top">
-												<img class="reviews__photo" src="@img/reviews/02.jpg" alt="фото отзыва">
-												<div class="reviews__data">
-													<div class="reviews__name">Максим Кузнецов</div>
-													<div class="reviews__geo">3-к. дом, 90 м²</div>
+											<div class="reviews__item">
+												<div class="reviews__top">
+													<img class="reviews__photo" src="@img/reviews/02.jpg" alt="фото отзыва">
+													<div class="reviews__data">
+														<div class="reviews__name">Максим Кузнецов</div>
+														<div class="reviews__geo">3-к. дом, 90 м²</div>
+													</div>
 												</div>
+												<div class="reviews__text">В первый раз оставляю отзыв осознанно 🙏 Очень крутое место
+													Дом максимально комфортный для проживания 🔥 Нас было 5 взрослых + 2 детей = 7 человек Рядом
+													прудик где плавают рыбки (можно кормить с детьми) бывает прилетают утки 🦆 До Истры идти минут
+													15 В общем максимально кайфанули от городской суеты Рекомендую 🔥🙏</div>
 											</div>
-											<div class="reviews__text">В первый раз оставляю отзыв осознанно 🙏 Очень крутое место
-												Дом максимально комфортный для проживания 🔥 Нас было 5 взрослых + 2 детей = 7 человек Рядом
-												прудик где плавают рыбки (можно кормить с детьми) бывает прилетают утки 🦆 До Истры идти минут
-												15 В общем максимально кайфанули от городской суеты Рекомендую 🔥🙏</div>
-										</div>
 
+										</div>
 									</div>
+
 								</div>
-
-
 								<button type="button" class="swiper-button-prev"><svg width="23" height="23" viewBox="0 0 23 23"
 										fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M16.0696 11.343H6.61694M6.61694 11.343L11.3433 6.6167M6.61694 11.343L11.3433 16.0693"
@@ -713,7 +716,6 @@
 										<path d="M6.61694 11.343H16.0696M16.0696 11.343L11.3433 6.6167M16.0696 11.343L11.3433 16.0693"
 											stroke="#3E5128" stroke-linecap="round" stroke-linejoin="round" />
 									</svg></button>
-
 							</div>
 							<a href="" class="reviews__button button">Оставить свой отзыв на Яндекс Картах</a>
 
