--- a/src/index.html
+++ b/src/index.html
@@ -618,7 +618,7 @@
 				<div class="reviews__container">
 					<h2 class="reviews__title title-h2">О нас пишут гости</h2>
 					<div class="reviews__content">
-						<div class="reviews__media">
+						<div class="reviews__media" data-da=".reviews__middle-box, 1280">
 							<img src="@img/reviews/img.jpg" alt="Image">
 							<span><img src="@img/reviews/avito.png" alt="Image"></span>
 						</div>
