--- a/src/index.html
+++ b/src/index.html
@@ -722,6 +722,67 @@
 						</div>
 					</div>
 				</div>
+				<div class="reviews__container--full">
+					<div class="reviews__footer">
+
+						<div class="reviews__slider1 swiper">
+							<div class="reviews__wrapper1 swiper-wrapper">
+								<div class="reviews__slide1 swiper-slide">
+									<img src="@img/reviews/animoji/izaura.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Часть друзей ещё ходили в баню — довольны</p>
+								</div>
+								<div class="reviews__slide1 swiper-slide">
+									<img src="@img/reviews/animoji/tip.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Очень крутое место. Дом максимально комфортный для проживания</p>
+								</div>
+								<div class="reviews__slide1 swiper-slide">
+									<img src="@img/reviews/animoji/izaura-botan.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Спасибо большое за гостеприимство! Все понравилось!</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="reviews__slider2 swiper">
+							<div class="reviews__wrapper2 swiper-wrapper">
+								<div class="reviews__slide2 swiper-slide">
+									<img src="@img/reviews/animoji/izaura-botan.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Чудесный дом, красивая территория, оперативная и чёткая поддержка
+										и помощь по всем вопросам!</p>
+								</div>
+								<div class="reviews__slide2 swiper-slide">
+									<img src="@img/reviews/animoji/blondy.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Рекомендую</p>
+								</div>
+								<div class="reviews__slide2 swiper-slide">
+									<img src="@img/reviews/animoji/izaura-botan.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Чудесный дом, красивая территория, оперативная и чёткая поддержка
+										и помощь по всем вопросам!</p>
+								</div>
+
+							</div>
+						</div>
+						<div class="reviews__slider3 swiper">
+							<div class="reviews__wrapper3 swiper-wrapper">
+								<div class="reviews__slide3 swiper-slide">
+									<img src="@img/reviews/animoji/komsomoka.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Все очень понравилось</p>
+								</div>
+								<div class="reviews__slide3 swiper-slide">
+									<img src="@img/reviews/animoji/potter.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Домик очень приятный, менеджеры на связи с 9 до 21 🙏 спасибо
+										за отдых!</p>
+								</div>
+								<div class="reviews__slide3 swiper-slide">
+									<img src="@img/reviews/animoji/belui.png" alt="" class="reviews__photo">
+									<p class="reviews__text-reviews">Хороший дом, чисто ухожено есть все необходимое!</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="mobile-list"></div>
+
+					</div>
+				</div>
 			</section>
 
 		</main>
