--- a/src/index.html
+++ b/src/index.html
@@ -785,6 +785,49 @@
 				</div>
 			</section>
 
+			<section class="contacts">
+				<div class="contacts__container">
+					<div class="contacts__content">
+						<h2 class="contacts__title title-h2">Контакты</h2>
+						<div class="contacts__box-links">
+							<div class="contacts__name">телефон</div>
+							<a href="tel:+79251437952" class="contacts__link contacts__link--tel">+7 925 143-79-52</a>
+							<div class="contacts__name">соцсети и мессенджеры</div>
+							<div class="contacts__soc-links">
+
+								<a href="" class="contacts__link">Вконтакте</a>
+								<a href="" class="contacts__link">WhatsApp</a>
+								<a href="" class="contacts__link">Нельзяграм</a>
+								<a href="" class="contacts__link">Max</a>
+								<a href="" class="contacts__link">Телеграм канал</a>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="contacts__map">
+						<div class="map-container">
+
+							<div style="position:relative;overflow:hidden;"><a
+									href="https://yandex.ru/maps/org/flatpoint/108571810204/?utm_medium=mapframe&utm_source=maps"
+									style="color:#eee;font-size:12px;position:absolute;top:0px;">FlatPoint</a><a
+									href="https://yandex.ru/maps/10731/istra/category/guest_house/131994109947/?utm_medium=mapframe&utm_source=maps"
+									style="color:#eee;font-size:12px;position:absolute;top:14px;">Гостевой дом в Истре</a><iframe
+									src="https://yandex.ru/map-widget/v1/?ll=36.861744%2C55.914104&mode=search&oid=108571810204&ol=biz&sctx=ZAAAAAgBEAAaKAoSCeI9B5YjLkNAEZMZbyu9EkhAEhIJj3IwmwDDvj8R2v6VlSalqD8iBgABAgMEBSgKOABA61NIAWoCcnWdAc3MzD2gAQCoAQC9AYV5zQDCAQacs4m7lAOCAgpmbGF0IHBvaW50igIAkgIAmgIMZGVza3RvcC1tYXBzqgJDMTc4NjEwODQ4MTkyLDE5MzYxMDg3MzI1LDYwMDIzODMsODkwMDE0MTMwNzQsMjE0NzEwOTk2MzY4LDYyMTIzODQzMQ%3D%3D&sll=36.861744%2C55.914104&sspn=0.030041%2C0.010099&text=flat%20point&z=16"
+									width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+							</div>
+						</div>
+
+
+
+
+
+
+					</div>
+
+				</div>
+			</section>
+
 		</main>
 
 
