--- a/src/index.html
+++ b/src/index.html
@@ -785,7 +785,7 @@
 				</div>
 			</section>
 
-			<section class="contacts">
+			<section class="contacts pt180">
 				<div class="contacts__container">
 					<div class="contacts__content">
 						<h2 class="contacts__title title-h2">Контакты</h2>
@@ -808,13 +808,10 @@
 					<div class="contacts__map">
 						<div class="map-container">
 
-							<div style="position:relative;overflow:hidden;"><a
-									href="https://yandex.ru/maps/org/flatpoint/108571810204/?utm_medium=mapframe&utm_source=maps"
-									style="color:#eee;font-size:12px;position:absolute;top:0px;">FlatPoint</a><a
-									href="https://yandex.ru/maps/10731/istra/category/guest_house/131994109947/?utm_medium=mapframe&utm_source=maps"
-									style="color:#eee;font-size:12px;position:absolute;top:14px;">Гостевой дом в Истре</a><iframe
+							<div style="position:relative;overflow:hidden;">
+								<iframe
 									src="https://yandex.ru/map-widget/v1/?ll=36.861744%2C55.914104&mode=search&oid=108571810204&ol=biz&sctx=ZAAAAAgBEAAaKAoSCeI9B5YjLkNAEZMZbyu9EkhAEhIJj3IwmwDDvj8R2v6VlSalqD8iBgABAgMEBSgKOABA61NIAWoCcnWdAc3MzD2gAQCoAQC9AYV5zQDCAQacs4m7lAOCAgpmbGF0IHBvaW50igIAkgIAmgIMZGVza3RvcC1tYXBzqgJDMTc4NjEwODQ4MTkyLDE5MzYxMDg3MzI1LDYwMDIzODMsODkwMDE0MTMwNzQsMjE0NzEwOTk2MzY4LDYyMTIzODQzMQ%3D%3D&sll=36.861744%2C55.914104&sspn=0.030041%2C0.010099&text=flat%20point&z=16"
-									width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
+									width="560" height="353" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
 							</div>
 						</div>
 
